deploy/manifests/deploy.yaml
---
# Source: age-secrets/templates/age-gui.yaml
apiVersion: v1
kind: Service
metadata:
  name: age-secret-controller-gui
  labels:
    app: age-gui
    helm.sh/chart: age-secrets-0.0.1
    app.kubernetes.io/name: age-secrets
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app: age-gui
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
---
# Source: age-secrets/templates/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: age-secret-controller-metrics
  labels:
    app: age-secret-controller
    helm.sh/chart: age-secrets-0.0.1
    app.kubernetes.io/name: age-secrets
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: age-secret-operator
    app.kubernetes.io/name: age-secrets
    app.kubernetes.io/instance: release-name
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
---
# Source: age-secrets/templates/age-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: age-secret-controller
  namespace: default
  labels:
    app: age-secret-controller
    helm.sh/chart: age-secrets-0.0.1
    app.kubernetes.io/name: age-secrets
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: age-secret-controller
      app.kubernetes.io/name: age-secrets
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: age-secret-controller
        app.kubernetes.io/name: age-secrets
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: age-secret-controller
      containers:
        - name: controller
          image: callmewhatuwant/age-secrets-operator:0.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - --leader-elect=true
            - --leader-election-namespace=age-system
---
# Source: age-secrets/templates/age-gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: age-secret-controller-gui
  labels:
    app: age-gui
    helm.sh/chart: age-secrets-0.0.1
    app.kubernetes.io/name: age-secrets
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
    type: "RollingUpdate"
  selector:
    matchLabels:
      app: age-gui
  template:
    metadata:
      labels:
        app: age-gui
    spec:
      containers:
        - name: age-gui
          ports:
            - containerPort: 8080
              name: gui
              protocol: TCP
          image: callmewhatuwant/age-gui:alpine3.22-perl
          imagePullPolicy: IfNotPresent
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            runAsUser: 101
      restartPolicy: Always
---
# Source: age-secrets/templates/age-gui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: age-secret-controller-gui
  labels:
    app: age-gui
    helm.sh/chart: age-secrets-0.0.1
    app.kubernetes.io/name: age-secrets
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: age-gui.local
      http:
        paths:
          - backend:
              service:
                name: age-secret-controller-gui
                port:
                  number: 8080
            path: /
            pathType: Prefix
